# articlequality

./: .gitattributes  CHANGELOG.md  Makefile  README.md  pyproject.toml
articlequality/utilities/: extract_labelings.py  extract_scores.py  extract_text.py  fetch_text.py  score.py
model_info/: enwiki.nettrom_wp10.md
models/: enwiki.nettrom_wp10.gradient_boosting.model  wikidatawiki.item_quality.gradient_boosting.model
